--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#  Dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build & Prod
+build/
 
-# testing
-/coverage
+# Environment
+*.env.*
+!.env.template
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.development
-.env.production
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# enviromental variables
-.idea
-.vscode
+# IDEA
+.idea/
+.vscode/
