--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.5",
     "react-use-websocket": "^4.5.0",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.4.2",
