--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
           password: ${{ secrets.DEMOSTAND_DATASTEP_PASSWORD }}
           script_stop: true
           script: |
-            cd datastep-demo
-            cd datastep-demo-frontend
+            cd ~/datastep-demo/
+            cd ~/datastep-demo-frontend/
             git checkout main
             git pull
 
