--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/search": "^3.12.0",
     "axios": "^1.4.0",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^10.15.1",
