--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,6 @@
+COMPOSE_PROJECT_NAME=
+
 REACT_APP_PAGE_TITLE=
+
 REACT_APP_BACKEND_URL=
 REACT_APP_STATIC_URL=
-REACT_APP_DB_CON_STR=
-REACT_APP_TABLE_NAME=
-REACT_APP_CLASSIFIER_MODEL_ID=
-REACT_APP_CHROMA_COLLECTION_NAME=
