--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,15 +21,16 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script_stop: true
           script: |
-            cd ~/datastep/demo-frontend/
+            cd ~/datastep/${{ github.event.repository.name }}/
+            
             git checkout main
             git pull
 
-            echo "Stop containers"
-            docker-compose stop
-
-            echo "Build new containers"
-            docker-compose build
-
-            echo "Run new containers"
-            docker-compose up -d
+            echo "Stop all containers"
+            docker compose stop
+            
+            echo "Clear docker cache"
+            docker system prune -f
+            
+            echo "Run updated container"
+            docker compose up -d --build
