--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "arrowParens": "always",
   "parser": "typescript",
   "printWidth": 90,
-  "singleQuote": false
+  "singleQuote": false,
+  "trailingComma": "all"
 }
