--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf-viewer/page-navigation": "^3.12.0",
     "@react-pdf-viewer/search": "^3.12.0",
     "axios": "^1.4.0",
+    "chakra-react-select": "^4.9.1",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^10.15.1",
     "moment": "^2.29.4",
